--- a/design.css
+++ b/design.css
@@ -4,7 +4,7 @@
  /*Add a white background color to the top navigation */
 
 .topnav {
-    background-color: transparent;
+    background-color: black;
     overflow: hidden;
 }
 
@@ -12,12 +12,12 @@
 .topnav a {
     float: left;
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 25px;
-    font-family: 'Hind', sans-serif;
+    font-size: 22px;
+    font-family: 'Quicksand', sans-serif;
 }
 
  /*Change the color of links on hover */
@@ -29,7 +29,6 @@
 
     background-image: url('leaves.jpg');
     height: 50%;
-
      /*Position and center the image to scale nicely on all screens */
     background-position: auto;
     background-repeat: no-repeat;
@@ -45,7 +44,7 @@
 }
 
 .HeaderTitle p{
-        font-size: 20px;
+        font-size: 25px;
         font-style: italic;
 }
 
@@ -54,8 +53,8 @@
 .searchBox{
     width: 100%;
     text-align:center;
-    padding-top: 90px;
-    padding-bottom: 300px;
+    padding-top: 70px;
+    padding-bottom: 90px;
 }
 
 /*submit bottom*/
@@ -66,7 +65,8 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
+    font-family: sans-serif;
     margin: 4px 2px;
     cursor: pointer;
 }
@@ -78,14 +78,15 @@
 input{
 
         position: center;
+        height: 55px;
 }
 
 input[type=text] {
-    width: 800px;
+    width: 900px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 20px;
     background-color: white;
     background-image: url('magnify.png');
     background-position: 10px 10px; 
@@ -96,22 +97,64 @@ input[type=text] {
 }
 
 /*--------MAP Content------------*/
-#content{
-    display:table; 
-    width:100%;
-    padding-top: 40px;
+
+#mapTab .title{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 45px;
 }
-.column {
-    display:table-cell;
-    width:80%;
-    padding:0 20px;
-}
-.two {
-    background:yellow;
-}
-/*Map*/
+
 #map {
-    height: 800px;
-    width: 800px;
-    
+    padding-top: 15 0px;
+    height:900px;
+    width: 100%;
+
     }
+#mapTab p{
+
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 35px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+/*#content1{
+    padding-top: 5px;
+}*/
+
+.Names{
+    font-family: 'Dosis', sans-serif;
+    font-size: 25px;
+    padding-left: 25px;
+}
+
+#Hotlines .title{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 50px;
+}
+#Hotlines .descrip{
+
+    padding-left: 90px;
+    padding-right:90px;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 25px;
+
+}
+
+#Hotlines p{
+    font-style: italic;
+    text-align: center;
+    font-size: 25px;
+}
+
+#Hotlines .num{
+    font-size: 45px;
+    text-align: center;
+    font-family: 'Dosis', sans-serif;
+}
